--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
 norecursedirs = env/*
-addopts = --tb=short -rE -vv --disable-warnings -p no:cacheprovider
+addopts = -vv -p no:cacheprovider --disable-warnings
 testpaths = tests/
 python_files = test_*.py
